core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select_raw__mathematical_scalar_functions-5.snap
---
source: core/iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT pow(i64_field, 3) FROM data\")"
---
Sort: time ASC NULLS LAST [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), pow:Float64;N]
  Projection: Dictionary(Int32, Utf8("data")) AS iox::measurement, data.time AS time, power(data.i64_field, Int64(3)) AS pow [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), pow:Float64;N]
    Filter: data.i64_field IS NOT NULL [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
      TableScan: data [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
